opam-version: "1.2"
name: "olinq"
version: "0.2"
author: "Simon Cruanes"
maintainer: "simon.cruanes.2007@m4x.org"
build: [
  ["dune" "build" "-p" name]
]
build-doc: [ "dune" "build" "@doc" "-p" name ]
depends: [
  "dune" {build}
  "odoc" {doc}
  "qtest" {test}
  "qcheck" {test}
  "base-bytes"
  "seq"
]
tags: [ "linq" "query" "join" "group" "collection" ]
homepage: "https://github.com/c-cube/olinq/"
dev-repo: "https://github.com/c-cube/olinq.git"
bug-reports: "https://github.com/c-cube/olinq/issues/"
available: [ocaml-version >= "4.00.0"]

