
(rule
  (targets run_qtest.ml)
  (deps (file Makefile))
  ;(mode fallback)
  ;(libraries qtest qcheck)
  (action
    (run make qtest-gen))
  )

(executable
  (name run_qtest)
  (flags :standard -w -33)
  (libraries olinq qcheck oUnit)
  )

(alias
 (name    runtest)
 (deps    run_qtest.exe)
 (action  (run ./run_qtest.exe))
 )

